# CPPropblem

./: .gitignore  CMakeLists.txt
docs/diagrams/src/: uml_seq_diagram_process.puml
src/: common.h  consumer.h  consumer_producer.h  logger.h  main.cpp  manager.h  my_manager.h  my_solver.h  my_storage.h  producer.h  solver.h  storage.h  task.h  thread_safe_map.h  thread_safe_queue.h
